# gmail-manager

./: .env.example  .gitignore  Install Gmail Action Sheet.bat  Install Gmail Action Sheet.command  Install Gmail Manager.bat  Install Gmail Manager.command  LICENSE  README.md  Start Gmail Manager.bat  Start Gmail Manager.command  Stop Gmail Action Sheet.bat  Stop Gmail Action Sheet.command  Stop Gmail Manager.bat  Stop Gmail Manager.command  TEST_PLAN.md  pyproject.toml  requirements.txt  web_app.py
data/: sample_emails.csv
docs/: gmail_setup.html
src/: appointment_llm.py  classifier.py  config.py  dedupe.py  gmail_client.py  main.py  models.py  sample_runner.py  sheets_client.py
static/: styles.css
templates/: dashboard.html  login.html  setup_pin.html
tests/: test_classifier.py  test_dedupe.py  test_gmail_client.py  test_main.py  test_web_app.py
